Fixed an issue with the way the Login Welcome message looked

--- a/src/options_page/styles/login.css
+++ b/src/options_page/styles/login.css
@@ -115,6 +115,10 @@ html {
 	width: fit-content;
 }
 
+.welcome-login {
+	padding: 1.2rem;
+}
+
 #welcome-message:not(.normal-wrap) {
 	width: min-content;
 }
