Tweaked a bit how some things in the login pages look
For QoL, incorrect inputs now give a red underline

--- a/src/options_page/styles/login.css
+++ b/src/options_page/styles/login.css
@@ -155,6 +155,7 @@ html {
 	}
 
 	>.text-input-text {
+		transition: 1s;
 		appearance: none;
 		border: none;
 		border-bottom: solid 2px var(--clr-placeholderbg-hover);
